Fixed overflow issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -102,7 +102,7 @@ hr {
 
 
 //==========================================================================
-//===========================Past Projects
+//===========================Past Projects-Mobile
 //==========================================================================
 .carousel {
   background-color: $color-grey;
@@ -129,6 +129,9 @@ hr {
 //===========================Past Projects
 //==========================================================================
 
+.overflowhd {
+  overflow: hidden;
+}
 
 
 .past-projects__MD .row {
